fix(core): popover hover will break the hover element style

--- a/core/src/components/base/Popover.scss
+++ b/core/src/components/base/Popover.scss
@@ -24,6 +24,7 @@
       width: 0;
       height: 0;
       border: 6px solid transparent;
+      pointer-events: none;
     }
     &[data-position^=top]::before, &[data-position^=bottom]::before {
       left: 50%;
